# QINGLV

./: .gitignore  .qmake.stash  ConveyorTracker.cpp  ConveyorTracker.h  Makefile  Makefile.Debug  Makefile.Release  YOLO_SETUP.md  boardcontrol.cpp  boardcontrol.h  caldistance.cpp  caldistance.h  camera_worker.cpp  camera_worker.h  camerathread.cpp  camerathread.h  config.ini  config.ini.example  dispatcher.cpp  dispatcher.h  guangxuan.pro  guangxuan.pro.user.ddef010  guangxuan.pro.user.ed9a61f  guangxuan_zh_CN.qm  guangxuan_zh_CN.ts  guangxuan_zh_EN.qm  guangxuan_zh_EN.ts  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pipeline_clock.cpp  pipeline_clock.h  pipeline_types.h  postprocess.cpp  postprocess.h  postprocess_ex.cpp  postprocess_ex.h  (+32 more)
debug/: Makefile  log.txt  moc_camerathread.cpp  moc_mainwindow.cpp  moc_savelocalpic.cpp  moc_uploadpictooss.cpp  object_script.guangxuan  qrc_resources.cpp  ui_mainwindow.h
docs/: architecture.md  design.md  design_notes.md  requirements.md  verification.md
i18n/: guangxuan_zh_CN.qm  guangxuan_zh_EN.ts
models/: README.md  yoloresulttypes.h  yolothread.cpp  yolothread.h
models/examples/: CMakeLists.txt  main.cc  minimal_integration_example.cpp  postprocess.cc  postprocess.h  yolo_thread_test.cpp
robotcontrol/include/: HR_Pro.h
src/app/: main.cpp  (+3 more)
tests/: test_dispatcher.cpp  test_main.cpp  test_offline_drivers.cpp  test_pipeline_clock.cpp  test_postprocess_ex.cpp  test_runtime_config.cpp  test_tracker_worker.cpp  tests.pro
updater/: mainwindow.h  updater.cpp  updater.h  updater.pro
(+53 files in other folders)
